style.css
/* ... */
#palette-nav a {
    color: #3b3b3b;
    font-size: 1.8rem;
    font-family: "Nanum Brush Script", "Roboto", sans-serif;
    text-decoration: none !important;
    position: relative;
}

#palette-nav a:hover {
    text-decoration: none !important;
}

#palette-nav a::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 15px;
    left: 0;
    background: url('brush-stroke.png') no-repeat;
    background-size: 100% 100%;
    bottom: -8px;
    display: none;
    text-decoration: none !important;
}

#palette-nav a:hover::before {
    display: block;
    text-decoration: none !important;
}

/* HEADER */

header {
    margin-top: 80px;
    height: 500px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 95vw;
}

.main-header {
    font-size: 4rem;
}

.description {
    font-size: 1.5rem;
    text-align: center;
    margin: 0 20px;
}

/* MAIN */

.grid-container {
    width: 90vw;
    height: 1150px;
    display: grid;
    grid-template-columns: 3;
    grid-template-rows: 2;
    column-gap: 25px;
    row-gap: 15px;
    margin: 20px;
    max-width: 90vw;
}

#palette a {
    color: #3b3b3b;
    margin: 0;
    padding: 0;
    font-size: 2.5rem;
    font-family: "Nanum Brush Script", "Roboto", sans-serif;
    text-decoration: none !important;
    position: relative;
    z-index: 10;
}

#palette a::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 15px;
    left: 0;
    background: url('brush-stroke.png') no-repeat;
    background-size: 100% 100%;
    bottom: -8px;
    display: none;

}

#palette a:hover::before {
    display: block;
}

.box img {
    max-width: 100%;
    height: auto;
    display: block;
    width: calc(100% - 20px);
    object-fit: cover;
    margin: 10px 10px;
    max-height: 60%;
}

.box {
    position: relative;
    overflow: hidden;
    max-width: 100%;
    margin: 5px;
    background: rgb(255, 255, 255);
}

.boxborder {
    position: relative;
}

.boxborder::before {
    content: '';
    position: absolute;
    height: 0;
    width: 0;
    border: 3px solid transparent;
    bottom: 0;
    left: 0;
    box-sizing: border-box;
}

.boxborder:hover::before {
    height: 100%;
    width: 100%;
    border: 3px solid #3b3b3b;  
    border-right: none;
    border-bottom: none;
    transition: height 0.5s ease-out, width 0.5s ease-out 0.5s;
}

.boxborder::after {
    content: '';
    position: absolute;
    height: 0;
    width: 0;
    border: 3px solid transparent;
    top: 0;
    right: 0;
    box-sizing: border-box;
}

.boxborder:hover::after {
    height: 100%;
    width: 100%;
    border: 3px solid #3b3b3b;
    border-left: none;
    border-top: none;
    transition: height 0.5s ease-out, width 0.5s ease-out 0.5s;
}

.dark-mode::before,
.dark-mode::after {
    border: 3px solid transparent;
}

.dark-mode:hover::before,
.dark-mode:hover::after {
    border-color: seashell;
    transition: height 0.5s ease-out, width 0.5s ease-out 0.5s;
}

.box-content {
    margin-left: 10px;
    padding: 5px;
}

.project-tools {
    font-style: italic;
}

.box1 {
    grid-row-start: 1;
    grid-row-end: 2;
    grid-column-start: 1;
    grid-column-end: 2;
}

.box2 {
    grid-row-start: 1;
    grid-row-end: 2;
    grid-column-start: 2;
    grid-column-end: 3;
}

.box3 {
    grid-row-start: 1;
    grid-row-end: 2;
    grid-column-start: 3;
    grid-column-end: 4;
}

.box4 {
    grid-row-start: 2;
    grid-row-end: 2;
    grid-column-start: 1;
    grid-column-end: 2;
}

.box5 {
    grid-row-start: 2;
    grid-row-end: 2;
    grid-column-start: 2;
    grid-column-end: 3;
}

.box6 {
    grid-row-start: 2;
    grid-row-end: 2;
    grid-column-start: 3;
    grid-column-end: 4;
}

.tools {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.tool-list {
    margin: 0;
    padding: 0;
    font-size: 3rem;
}

.browsers {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.browser-list {
    margin: 0;
    padding: 0;
    font-size: 3rem;
}


.tools ul li i:hover {
    color: hsl(310, 59%, 74%);
    cursor: pointer;
    transition: color 0.25s linear;
}

.browsers ul li i:hover {
    color: hsl(310, 59%, 74%);
    cursor: pointer;
    transition: color 0.25s linear;
}

.hard-line {
    border-bottom: 2px solid #3b3b3b;
    width: 25%;
}

.dark-mode.hard-line {
    border-bottom: 2px solid seashell;
}

.portfolio-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.portfolio-info-header {
    font-size: 2rem;
    text-align: center;
}

.portfolio-info-desc {
    font-size: 1.25rem;
    text-align: center;
}

.portfolio-info-tools {
    display: block;
    font-size: 1.2rem;
    text-align: center;
}

.portfolio-info-browsers {
    display: block;
    font-size: 1.2rem;
    text-align: center;
}

.portfolio-info-tools-browsers-mobile {
    display: none;
}

.green {
    color: hsl(120, 98%, 38%);
}

.red {
    color: hsl(0, 100%, 61%);
}

/* FOOTER */

footer a {
    color: #3b3b3b;
    text-decoration: none;
}

footer a:hover {
    text-decoration: underline;
}
/* ... */

